--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,9 @@ flake8 = "^7.3.0"
 isort = "^6.0.1"
 
 
+
+[tool.poetry.group.test.dependencies]
+pytest = "^8.4.1"
+
 [tool.black]
 line-length = 69
