--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ isort = "^6.0.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.4.1"
+pytest-cov = "^6.2.1"
 
 [tool.black]
 line-length = 69
